--- a/Group1_HW_Set2.Rmd
+++ b/Group1_HW_Set2.Rmd
@@ -181,12 +181,22 @@ At this point, I would suggest that another model family should be investigated
 and test-set behavior should be compared.
 
 # KJ Question 7.2
+Friedman (1991) introduced several benchmark data sets create by simulation.
+One of these simulations used the following nonlinear equation to create data:
+\[
+y = 10\sin(\pi x_1 x_2) + 20\left(x_3 − 0.5\right)^2 + 10x_4 +5x_5 +
+\mathcal{N}\left(0, \sigma^2\right)
+\]
 
-7.2. Friedman (1991) introduced several benchmark data sets create by simulation. One of these simulations used the following nonlinear equation to create data: y = 10sin(πx1x2) + 20(x3 −0.5)2 + 10x4 +5x5 + N(0,σ2) where the x values are random variables uniformly distributed between [0, 1] (there are also 5 other non-informative variables also created in the simulation). The package mlbench contains a function called mlbench.friedman1 that simulates these data
+where the \(x\) values are random variables uniformly distributed between
+\([0, 1]\) (there are also 5 other non-informative variables also created in the
+simulation). The package `mlbench` contains a function called
+`mlbench.friedman1` that simulates these data.
 
 Tune several models on these data. 
 
-Which models appear to give the best performance? Does MARS select the informative predictors (those named X1–X5)?
+Which models appear to give the best performance? Does MARS select the
+informative predictors (those named `X1–X5`)?
 
 ```{r KJ7.2}
 library(mlbench)
@@ -201,12 +211,17 @@ test$x <- data.frame(test$x)
 featurePlot(train$x, train$y)
 ```
 
-We see each of the features plotted against the target. The first 5 features (X1-X5) are predictive of the target, whereas the last 5 features have no correlation with the target. It appears that X1 and X4 have the highest correlation with the target, X2 and X5 have a looser correlation with the target, and X3 may have a quadratic relationship with the target.
+We see each of the features plotted against the target. The first 5 features
+(`X1-X5`) are predictive of the target, whereas the last 5 features have no
+correlation with the target. It appears that `X1` and `X4` have the highest
+correlation with the target, `X2` and `X5` have a looser correlation with the
+target, and `X3` may have a quadratic relationship with the target.
 
 ```{r KJ7.2elastic}
 cv_control <- trainControl(method = 'cv')
 
-elasticnet_model <- train(train$x, train$y, method = 'glmnet', tunelength = 10, trControl = cv_control)
+elasticnet_model <- train(train$x, train$y, method = 'glmnet', tunelength = 10,
+                          trControl = cv_control)
 
 coef(elasticnet_model$finalModel, elasticnet_model$bestTune$.lambda)[,63]
 
@@ -215,14 +230,16 @@ elasticPred <- predict(elasticnet_model, newdata = test$x)
 postResample(pred = elasticPred, obs = test$y)
 ```
 
-We can see from the model coefficients that even a simple elastic net is generally recognizing the more predictive features as being more important.
+We can see from the model coefficients that even a simple elastic net is
+generally recognizing the more predictive features as being more important.
 
-The simple elastic net model has an RMSE of 2.69 and an R squared of .72.
+The simple elastic net model has an RMSE of 2.69 and an R squared of 0.72.
 
 ```{r KJ7.2NN}
 nnet_grid <- expand.grid(.decay = c(0, 0.1, 1), .size = c(1:10), .bag = F)
 
-nnet_model <- train(train$x, train$y, method = 'avNNet', tuneGrid = nnet_grid, preProc = c('center', 'scale'), linout = T, trace = F)
+nnet_model <- train(train$x, train$y, method = 'avNNet', tuneGrid = nnet_grid,
+                    preProc = c('center', 'scale'), linout = T, trace = F)
 
 nnet_model$bestTune
 
@@ -231,12 +248,16 @@ nnetPred <- predict(nnet_model, newdata = test$x)
 postResample(pred = nnetPred, obs = test$y)
 ```
 
-The features are all uncorrelated enough to warrant using all features in the neural net model. We preprocess the data by standardizing it in order to have all features on the same scale. The simple neural network model performs best with 4 neurons and has an RMSE of 2.17 and an R squared of .81.
+The features are all uncorrelated enough to warrant using all of them in the
+neural net model. We preprocess the data by standardizing it in order to have
+all features on the same scale. The simple neural network model performs best
+with 4 neurons and has an RMSE of 2.17 and an R squared of 0.81.
 
 ```{r KJ7.2MARS, warning = F}
 mars_grid <- expand.grid(.degree = c(1,2), .nprune = c(2:38))
 
-mars_model <- train(train$x, train$y, method = 'earth', tuneGrid = mars_grid, trControl = cv_control)
+mars_model <- train(train$x, train$y, method = 'earth', tuneGrid = mars_grid,
+                    trControl = cv_control)
 
 marsPred <- predict(mars_model, newdata = test$x)
 
@@ -245,10 +266,16 @@ varImp(mars_model)
 postResample(pred = marsPred, obs = test$y)
 ```
 
-The Multivariate Adaptive Regression Splines model (or MARS) does an excellent job identifying predictive features, assigning an importance of 0 to 4/5 noise features and placing the last noise feature far below the 5 predictive features. The MARS model performs excellently with an RMSE of 1.32 and an R squared of .93.
+The Multivariate Adaptive Regression Splines model (or MARS) does an excellent
+job identifying predictive features, assigning an importance of 0 to 4/5 noise
+features and placing the last noise feature far below the 5 predictive features.
+The MARS model performs excellently with an RMSE of 1.32 and an R squared of
+0.93.
 
 ```{r KJ7.2SVM}
-svm_model <- train(train$x, train$y, method = 'svmRadial', preProc = c('center', 'scale'), tuneLength = 14, trControl = cv_control)
+svm_model <- train(train$x, train$y, method = 'svmRadial',
+                   preProc = c('center', 'scale'), tuneLength = 14,
+                   trControl = cv_control)
 
 svmPred <- predict(svm_model, newdata = test$x)
 
@@ -257,19 +284,24 @@ svm_model$finalModel
 postResample(pred = svmPred, obs = test$y)
 ```
 
-The SVM model performs on par with the neural network with an RMSE of 2.03 and an R squared of .84. The model is using 163/200 of the data points as support vectors, or 81.5% of the data.
+The SVM model performs on par with the neural network with an RMSE of 2.03 and
+an R squared of 0.84. The model is using 163/200 of the data points as support
+vectors, or 81.5% of the data.
 
-```{r}
+```{r KJ7.2KNN}
 knn_grid <- expand.grid(.k = c(1:20))
 
-knn_model <- train(train$x, train$y, method = 'knn', preProc = c('center', 'scale'), tuneGrid = knn_grid, trControl = cv_control)
+knn_model <- train(train$x, train$y, method = 'knn',
+                   preProc = c('center', 'scale'), tuneGrid = knn_grid,
+                   trControl = cv_control)
 
 knnPred <- predict(knn_model, newdata = test$x)
 
 postResample(pred = knnPred, obs = test$y)
 ```
 
-The KNN model performs best with k = 6 but has relatively poor performance on the dataset, achieiving an RMSE of 3.06 and an R squared of only .64.
+The KNN model performs best with k = 6 but has relatively poor performance on
+the dataset, achieving an RMSE of 3.06 and an R squared of only 0.64.
 
 # KJ Question 7.5
 ## Question
@@ -461,7 +493,8 @@ simulated <- as.data.frame(simulated)
 colnames(simulated)[ncol(simulated)] <- "y"
 ```
 
-(a) Fit a random forest model to all the predictors, then estimate the variable importance scores:
+(a) Fit a random forest model to all the predictors, then estimate the variable
+importance scores:
   
 ```{r KJ81PREP2, message=FALSE, warning=FALSE}
 #data prep
@@ -474,9 +507,11 @@ rfImp1 <- varImp(model1, scale = F)
 ```
 
   
-Did the random forest model significantly use the uninformative predictors (V6 - V10)?
+Did the random forest model significantly use the uninformative predictors
+(V6 - V10)?
 
-(b) Now add an additional predictor that is highly correlated with one of the informative predictors. For example:
+(b) Now add an additional predictor that is highly correlated with one of the
+informative predictors. For example:
 
 ```{r KJ81PREP3}
 #data prep
@@ -486,22 +521,29 @@ simulated$duplicate1 <- simulated$V1 + rnorm(200) * .1
 cor(simulated$duplicate1, simulated$V1)
 ```
 
-Fit another random forest model to these data. Did the importance score for V1 change? What happens when you add another predictor that is also highly correlated with V1?
+Fit another random forest model to these data. Did the importance score for V1
+change? What happens when you add another predictor that is also highly
+correlated with V1?
 
-(c) Use the `cforest` function in the party package to fit a random forest model using conditional inference trees. The party package function `varimp` can calculate predictor importance. the `conditional` argument of that function toggles between traditional importance measure and the modified version described in Strobl et al. (2007). Do these importances show the same pattern as the traditional random forest model?
+(c) Use the `cforest` function in the party package to fit a random forest model
+using conditional inference trees. The party package function `varimp` can
+calculate predictor importance. the `conditional` argument of that function
+toggles between traditional importance measure and the modified version
+described in Strobl et al. (2007). Do these importances show the same pattern as
+the traditional random forest model?
 
-(d) Repeat this process with different tree models, such as boosted trees and Cubist. Does the same pattern occur?
-
+(d) Repeat this process with different tree models, such as boosted trees and
+Cubist. Does the same pattern occur?
 
 ## Answers
-
 ### Part (a)
 
 ```{r KJ81a1}
 rfImp1
 ```
 
-According to the variable importance plot, V6 - V10 are all close to zero, which indicates that they were not very important towards fitting the model.
+According to the variable importance plot, V6 - V10 are all close to zero, which
+indicates that they were not very important towards fitting the model.
 
 ### Part (b)
 
@@ -513,7 +555,8 @@ rfImp81b1 <- varImp(model81b1, scale = F)
 rfImp81b1
 ```
 
-Looking at the variable importance plot, we can see that the importance score from V1 dropped from 8.7 to 6.3.
+Looking at the variable importance plot, we can see that the importance score
+from V1 dropped from 8.7 to 6.3.
 
 ```{r KJ81b2}
 set.seed(100)
@@ -525,7 +568,13 @@ rfImp81b2 <- varImp(model81b2, scale = F)
 rfImp81b2
 ```
 
-Adding another predictor that is highly correlated with V1 lowers the variable importance of V1 even further down from 6.3 to 5.9. It appears that multicollinear variables can muddle the variable importance calculations for random forest. Unless adding multicollinear variables would significantly improve model predictions, the best option for model selection using random forest is to remove multicollinear variables so that the variable importance plot is more accurate.
+Adding another predictor that is highly correlated with V1 lowers the variable
+importance of V1 even further down from 6.3 to 5.9. It appears that
+multicollinear variables can muddle the variable importance calculations for
+random forest. Unless adding multicollinear variables would significantly
+improve model predictions, the best option for model selection using random
+forest is to remove multicollinear variables so that the variable importance
+plot is more accurate.
 
 ### Part (c)
 
@@ -541,7 +590,16 @@ rfImp81c1_cond
 rfImp81c1_noncond
 ```
 
-When the conditional argument is true, the duplicate and V1 variable importances decrease significantly. This pushes duplicate1 and duplicate2 close to the bottom in terms of importance. When the conditional argument is false, V1, duplicate1, and duplicate2 have much higher variable importances. The important thing to note from this comparison is that when conditional is true, duplicate1 and duplicate2 have lower variable importances compared to V5. This is not true when conditional is false, where the importance of V5 is drowned out by the noise of duplicate1 and duplicate2. Therefore, we can conclude that the importances shown when conditional is true does not exhibit the same pattern as the traditional random forest model.
+When the conditional argument is true, the duplicate and V1 variable importance
+decrease significantly. This pushes duplicate1 and duplicate2 close to the
+bottom in terms of importance. When the conditional argument is false, V1,
+duplicate1, and duplicate2 have much higher variable importance. The important
+thing to note from this comparison is that when conditional is true, duplicate1
+and duplicate2 have lower variable importance compared to V5. This is not true
+when conditional is false, where the importance of V5 is drowned out by the
+noise of duplicate1 and duplicate2. Therefore, we can conclude that the
+importance shown when conditional is true does not exhibit the same pattern as
+the traditional random forest model.
 
 ### Part (d)
 
@@ -550,8 +608,10 @@ library(gbm)
 
 set.seed(100)
 
-gbm_81d_1 = gbm(y ~ V1 + V2 + V3 + V4 + V5 + V6 + V7 + V8 + V9 + V10, data = simulated, distribution = "gaussian")
-gbm_81d_dup1 = gbm(y ~ V1 + V2 + V3 + V4 + V5 + V6 + V7 + V8 + V9 + V10 + duplicate1, data = simulated, distribution = "gaussian")
+gbm_81d_1 = gbm(y ~ V1 + V2 + V3 + V4 + V5 + V6 + V7 + V8 + V9 + V10,
+                data = simulated, distribution = "gaussian")
+gbm_81d_dup1 = gbm(y ~ V1 + V2 + V3 + V4 + V5 + V6 + V7 + V8 + V9 + V10 +
+                     duplicate1, data = simulated, distribution = "gaussian")
 gbm_81d_all = gbm(y ~ ., data = simulated, distribution = "gaussian")
 
 summary(gbm_81d_1)
@@ -559,15 +619,24 @@ summary(gbm_81d_dup1)
 summary(gbm_81d_all)
 ```
 
-Repeating this process with the boosted tree model, we see some interesting outputs for the variable importance graphs. As multicollinear variables are included, the ranking of variable importance remains exactly the same with minimal changes in the variable importance values. Duplicate1 and Duplicate2 are relegated to the middle of the graph, where they are less important compared to V4, V1, V2, V5, and V3. It appears that boosted trees deal with multicollinearity better than random forest. While multicollinearity is still not ideal for this model, the model is robust enough to handle it.
+Repeating this process with the boosted tree model, we see some interesting
+outputs for the variable importance graphs. As multicollinear variables are
+included, the ranking of variable importance remains exactly the same with
+minimal changes in the variable importance values. Duplicate1 and Duplicate2
+are relegated to the middle of the graph, where they are less important compared
+to V4, V1, V2, V5, and V3. It appears that boosted trees deal with
+multicollinearity better than random forest. While multicollinearity is still
+not ideal for this model, the model is robust enough to handle it.
 
 ```{r KJ81d2, message=FALSE, warning=FALSE}
 library(Cubist)
 
 set.seed(100)
 
-cubist_81d_1 = cubist(simulated[,!names(simulated) %in% c("y","duplicate1","duplicate2")], simulated$y)
-cubist_81d_dup1 = cubist(simulated[,!names(simulated) %in% c("y","duplicate2")], simulated$y)
+cubist_81d_1 = cubist(simulated[, !names(simulated) %in%
+                                  c("y","duplicate1","duplicate2")], simulated$y)
+cubist_81d_dup1 = cubist(simulated[,!names(simulated) %in%
+                                     c("y","duplicate2")], simulated$y)
 cubist_81d_all = cubist(simulated[,!names(simulated) %in% c("y")], simulated$y)
 
 varImp(cubist_81d_1)
@@ -575,15 +644,29 @@ varImp(cubist_81d_dup1)
 varImp(cubist_81d_all)
 ```
 
-The cubist model is even more interesting. According to the variable importance plots, multicollinearity is a total nonfactor for this model. No matter how many multicollinear variables are included, the model includes the same four variables V1, V2, V4, and V5. Also, their variable importances are all the same value of 50. This model appears to be very robust, which is good from a modelling perspective. This model was able to sift through the noise generated through multicollinearity and pick out the four most important variables consistently. Overall, very impressive.
+The cubist model is even more interesting. According to the variable importance
+plots, multicollinearity is a total nonfactor for this model. No matter how many
+multicollinear variables are included, the model includes the same four
+variables V1, V2, V4, and V5. Also, their variable importance are all the same
+value of 50. This model appears to be very robust, which is good from a
+modelling perspective. This model was able to sift through the noise generated
+through multicollinearity and pick out the four most important variables
+consistently. Overall, very impressive.
 
 # KJ Question 8.2
 
 Use a simulation to show tree bias with different granularities.
 
 ## Answer
-
-The main problem with single regression trees is that they are highly susceptible to selection bias. Often times, a regression tree will choose low-variance predictors with more distinct values compared to high variance predictors that are actually correlated with the dependent variable. When many variables are included in the model, there is a high risk that some of the high granularity uncorrelated variables will have more splits and will be chosen to split the top nodes of the tree. When these trees are pruned, the trees will only contain those highly granular noise variables instead of the correct variables.
+The main problem with single regression trees is that they are highly
+susceptible to selection bias. Often times, a regression tree will choose
+low-variance predictors with more distinct values compared to high variance
+predictors that are actually correlated with the dependent variable. When many
+variables are included in the model, there is a high risk that some of the high
+granularity uncorrelated variables will have more splits and will be chosen to
+split the top nodes of the tree. When these trees are pruned, the trees will
+only contain those highly granular noise variables instead of the correct
+variables.
 
 This problem can be demonstrated through simulation as seen below:
 
@@ -593,17 +676,27 @@ set.seed(100)
 good_variable1 = sample(1:5, 500, replace = T)
 good_variable2 = sample(1:2, 500, replace = T)
 bad_variable = rnorm(500, mean = 0, sd = 3)
-dependent_variable = good_variable1 + good_variable2 + rnorm(500, mean = 0, sd = 7)
+dependent_variable = good_variable1 + good_variable2 +
+  rnorm(500, mean = 0, sd = 7)
 
-simulated_data = data.frame(good_variable1 = good_variable1, good_variable2 = good_variable2, dependent_variable = dependent_variable, bad_variable = bad_variable)
+simulated_data = data.frame(good_variable1 = good_variable1,
+                            good_variable2 = good_variable2,
+                            dependent_variable = dependent_variable,
+                            bad_variable = bad_variable)
 
 tree_sim = rpart::rpart(dependent_variable ~ ., data = simulated_data)
 
 varImp(tree_sim)
 ```
 
-`dependent_variable` was constructed using `good_variable1`, `good_variable2`, and some high-variance noise. `bad_variable` is a low-variance random normal that is unrelated to `dependent_variable`. `good_variable1` has 5 unique values and `good_variable2` has two unique values, while `bad_variable` has 500 unique values. After fitting a single regression tree to the simulated data using `rpart()` and checking the variable importance, we can see that `bad_variable` has higher variable importance compared to `good_variable1` and `good_variable2` even though `bad_variable` was not used to create `dependent_variable`.
-
+`dependent_variable` was constructed using `good_variable1`, `good_variable2`,
+and some high-variance noise. `bad_variable` is a low-variance random normal
+that is unrelated to `dependent_variable`. `good_variable1` has 5 unique values
+and `good_variable2` has two unique values, while `bad_variable` has 500 unique
+values. After fitting a single regression tree to the simulated data using
+`rpart()` and checking the variable importance, we can see that `bad_variable`
+has higher variable importance compared to `good_variable1` and `good_variable2`
+even though `bad_variable` was not used to create `dependent_variable`.
 
 # KJ Question 8.3
 
