--- a/Group1_HW_Set2.Rmd
+++ b/Group1_HW_Set2.Rmd
@@ -1,14 +1,16 @@
 ---
 title: "CUNY DT 624"
+subtitle: Homework Set 2
 author: 'Group 1: Avraham Adler, Vishal Arora, Samuel Bellows, Austin Chan'
 date: "Summer 2020"
 output:
+  word_document:
+    toc: true
+    toc_depth: 3
   html_document:
     df_print: paged
-  toc: yes
-  word_document: null
-subtitle: Homework Set 2
-toc_depth: 3
+    toc: yes
+    toc_depth: 3
 ---
 
 ```{r setup, include=FALSE}
