--- a/Group1_Project2.Rmd
+++ b/Group1_Project2.Rmd
@@ -14,6 +14,7 @@ knitr::opts_chunk$set(echo=FALSE, warning=FALSE)
 library(openxlsx)
 library(caret)
 library(data.table)
+ncl <- parallel::detectCores() * 0.75
 ```
 
 # Agenda
@@ -187,7 +188,7 @@ fitControl <- trainControl(method = "repeatedcv", number = 5L, repeats = 3L,
                            allowParallel = TRUE)
 ```
 ```{r elastiNet, cache=2L}
-cl <- parallel::makePSOCKcluster((parallel::detectCores() * 0.5))
+cl <- parallel::makePSOCKcluster(ncl)
 doParallel::registerDoParallel(cl)
 set.seed(9614)
 elFit <- train(x = trnX, y = trnY, method = 'enet',
@@ -199,7 +200,7 @@ mdCmp <- rbind(mdCmp, data.frame(Model = "ElasticNet",
 parallel::stopCluster(cl)
 ```
 ```{r randomF, cache=2L}
-cl <- parallel::makePSOCKcluster((parallel::detectCores() * 0.5))
+cl <- parallel::makePSOCKcluster(ncl)
 doParallel::registerDoParallel(cl)
 rfGrid <- expand.grid(mtry = 31:34,
                       splitrule = 'extratrees',
@@ -213,7 +214,46 @@ mdCmp <- rbind(mdCmp, data.frame(Model = "Random Forest",
                                  TstErr = RMSE(predict(rfFit, tstX), tstY)))
 parallel::stopCluster(cl)
 ```
-
+```{r svmF, cache=2L}
+cl <- parallel::makePSOCKcluster(ncl)
+doParallel::registerDoParallel(cl)
+svmGrid <- expand.grid(C = seq(2.78, 2.82, 0.01),
+                       sigma = seq(0.049, 0.051, 0.001))
+set.seed(9614)
+svmFit <- train(x = trnX, y = trnY, method = 'svmRadial',
+               preProcess = c('nzv', 'knnImpute'), trControl = fitControl,
+               tuneGrid = svmGrid)
+mdCmp <- rbind(mdCmp, data.frame(Model = "Support Vector Machine",
+                                 TrnErr = getTrainPerf(svmFit)$TrainRMSE,
+                                 TstErr = RMSE(predict(svmFit, tstX), tstY)))
+parallel::stopCluster(cl)
+```
+```{r rvmF, cache=2L}
+cl <- parallel::makePSOCKcluster(ncl)
+doParallel::registerDoParallel(cl)
+rvmGrid <- expand.grid(sigma = seq(1.7e-4, 1.9e-4, 1e-5))
+set.seed(9614)
+rvmFit <- train(x = trnX, y = trnY, method = 'rvmRadial',
+               preProcess = c('nzv', 'knnImpute'), trControl = fitControl,
+               tuneGrid = rvmGrid)
+mdCmp <- rbind(mdCmp, data.frame(Model = "Relevance Vector Machine",
+                                 TrnErr = getTrainPerf(rvmFit)$TrainRMSE,
+                                 TstErr = RMSE(predict(rvmFit, tstX), tstY)))
+parallel::stopCluster(cl)
+```
+```{r knnF, cache=2L}
+cl <- parallel::makePSOCKcluster(ncl)
+doParallel::registerDoParallel(cl)
+knnGrid <- expand.grid(k = 7:9)
+set.seed(9614)
+knnFit <- train(x = trnX, y = trnY, method = 'knn',
+               preProcess = c('nzv', 'knnImpute'), trControl = fitControl,
+               tuneGrid = knnGrid)
+mdCmp <- rbind(mdCmp, data.frame(Model = "K-Nearest Neighbors",
+                                 TrnErr = getTrainPerf(knnFit)$TrainRMSE,
+                                 TstErr = RMSE(predict(knnFit, tstX), tstY)))
+parallel::stopCluster(cl)
+```
 ## Results
 ```{r mResults}
 knitr::kable(mdCmp[order(mdCmp$TstErr), ], format = 'pandoc', digits = 3L)
@@ -233,8 +273,6 @@ ratio between the most common and second most common instance is 19:1 or greater
 ```{r echo=FALSE}
 knitr::kable(nzv(trainX, saveMetrics = TRUE), format = 'pandoc', digits = 3L)
 ```
-
-
 
 # References
   * Hastie, T.; Tibshirani, R. & Friedman, J. (2001),
